# prompt2langgraph

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: prompt2langgraph-v0.2-三期任务划分方案A.md  prompt2langgraph-v0.2-第一期实施计划文档.md  prompt2langgraph-v0.2-第一期开发计划文档.md  prompt2langgraph-v0.2-第三期实施计划文档.md  prompt2langgraph-v0.2-第三期开发计划文档.md  prompt2langgraph-v0.2-第二期实施计划文档.md  prompt2langgraph-v0.2-第二期开发计划文档.md  prompt2langgraph实现目标差距评估报告.md  prompt2langgraph系统架构设计文档-v0.1.md  prompt2langgraph系统架构设计文档.md  prompt2langgraph需求文档-v0.1.md  prompt2langgraph需求文档.md  pt2lg笔记.md
docs/llm/: Qwen模型采样参数设置.md  model_config.json
scripts/: benchmark_compile.py  update_golden.py
src/prompt2langgraph/: __init__.py  cli.py
tests/: fake_provider.py  fake_tools.py  test_artifacts.py  test_bundle_golden.py  test_cli.py  test_compile_flow.py  test_engineering_gates.py  test_examples.py  test_integration_execution.py  test_ir_schema.py  test_join_execution.py  test_json_plan_adapter.py  test_langgraph_compiler.py  test_llm_executor.py  test_llm_provider.py  test_prompt_parser.py  test_prompt_planner.py  test_public_api.py  test_runner.py  test_security_policy.py  test_side_effect_executor.py  test_skill_dir.py  test_skill_workflow.py  test_source_diagnostics.py  test_tool_executor.py  test_validator.py
tests/examples/: README.md
tests/fixtures/: conditional_human_gate.json  fanout_join_reduce.json  fanout_map_reduce.json  fanout_to_join.json  fanout_with_join.json  invalid_fanout_without_reducer.json  invalid_join_edge.json  linear_with_join.json  (+11 more)
(+83 files in other folders)
