[project]
name = "prompt2langgraph"
version = "0.1.0"
description = "Compile validated prompt/plan/skill workflow IR into LangGraph graphs."
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=0.1,<1.0",
  "langgraph>=1.0,<2.0",
  "langsmith>=0.3.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "typer>=0.12,<1.0",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
checkpoint-sqlite = ["langgraph-checkpoint-sqlite>=2.0"]

[project.scripts]
pt2lg = "prompt2langgraph.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.coverage.run]
branch = true
source = ["prompt2langgraph"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85
